--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -129,6 +129,10 @@
 <script src="https://code.jquery.com/jquery-3.7.1.min.js" defer></script>
 <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js" defer></script>
 <script src="https://cdn.datatables.net/1.13.6/js/dataTables.bootstrap5.min.js" defer></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
+<script src="{% static 'js/main.js' %}" defer></script>
+
+
 
 {% block extra_js %}
 <script src="{% static 'js/main.js' %}"></script>
