--- a/core/templates/core/transaction_form.html
+++ b/core/templates/core/transaction_form.html
@@ -74,7 +74,7 @@
           </div>
         </div>
 
-        <!-- CATEGORY (com suporte a TomSelect e autocompletar local) -->
+        <!-- CATEGORY -->
         <div class="mb-3" id="category-field">
           {{ form.category.label_tag }}
           <input
