--- a/core/templates/core/account_form.html
+++ b/core/templates/core/account_form.html
@@ -20,20 +20,20 @@
 
     {# Campos do formulário #}
     <div class="mb-3">
-      <label for="{{ form.name.id_for_label }}" class="form-label">Name</label>
-      {{ form.name|add_class:"form-control" }}
+      <label for="{{ form.name.id_for_label }}" id="label-name" class="form-label">Name</label>
+      {{ form.name|add_class:"form-control"|attr:"aria-labelledby:label-name" }}
       {{ form.name.errors }}
     </div>
 
     <div class="mb-3">
-      <label for="{{ form.account_type.id_for_label }}" class="form-label">Type</label>
-      {{ form.account_type|add_class:"form-select" }}
+      <label for="{{ form.account_type.id_for_label }}" id="label-account-type" class="form-label">Type</label>
+      {{ form.account_type|add_class:"form-select"|attr:"aria-labelledby:label-account-type" }}
       {{ form.account_type.errors }}
     </div>
 
     <div class="mb-3">
-      <label for="{{ form.currency.id_for_label }}" class="form-label">Currency</label>
-      {{ form.currency|add_class:"form-select" }}
+      <label for="{{ form.currency.id_for_label }}" id="label-currency" class="form-label">Currency</label>
+      {{ form.currency|add_class:"form-select"|attr:"aria-labelledby:label-currency" }}
       {{ form.currency.errors }}
     </div>
 
